# Gravity

./: .gitignore  CMakeLists.txt  DataTypes.h  GeneralQuaternion.cpp  GeneralQuaternion.h  OrbitalPhysics.cpp  OrbitalPhysics.h  PerturbationInitializer.cpp  Simulation.cpp  Simulation.h  SimulationParameters.h  StabilityTester.cpp  StabilityTester.h  main.cpp
Metrics/: Metric.h  StabilityMetric.cpp  StabilityMetric.h
Random/: Randomizer.cpp  Randomizer.h
Satellite/: Position.cpp  Position.h  Satellite.cpp  Satellite.h
Simulation/: PerturbationInitializer.cpp  PerturbationInitializer.h  PositionInitializer.h  Simulation.cpp  Simulation.h  SimulationParameters.h
Solver/: RungeKutta4.cpp  RungeKutta4.h  Solver.h
